--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>DeveloperFolio | Developer Portfolio Template</title><meta name="title" content="DeveloperFolio | Developer Portfolio Template"><meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"><meta property="og:type" content="website"><meta property="og:url" content="https://developerfolio.js.org/"><meta property="og:title" content="DeveloperFolio | Developer Portfolio Template"><meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://developerfolio.js.org/"><meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template"><meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer"><meta name="msapplication-TileColor" content="#603cba"><meta name="theme-color" content="#6c63ff"/><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v8=qAJ44G5Bm7"><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png?v8=qAJ44G5Bm7"><link rel="mask-icon" href="./safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5"><link rel="shortcut icon" href="./favicon.ico?v8=qAJ44G5Bm7"><link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v8=qAJ44G5Bm7"><link rel="manifest" href="./manifest.json"/><link rel="preload" href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin><link rel="preload" href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin><script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-135618960-2")</script><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css"><script defer="defer" src="./static/js/main.1322b13f.js"></script><link href="./static/css/main.5b2d260d.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Mei Meng | Developer Portfolio</title><meta name="title" content="DeveloperFolio | Developer Portfolio"/><meta name="description" content="Create engaging user interfaces with interactive front-end elements and optimize website for you"/><meta property="og:site_name" content="Mei Meng"/><meta property="og:type" content="website"/><meta property="og:url" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/"/><meta property="og:title" content="Mei Meng - DeveloperFolio"/><meta property="og:description" content="Mei Meng, developer frontend à Paris, design captivating user interfaces with interactive front-end functionality for your website."/><meta property="og:image" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png"/><meta property="twitter:card" content="summary_large_image"/><meta property="twitter:url" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/"/><meta property="twitter:title" content="Mei Meng - DeveloperFolio"/><meta property="twitter:description" content="Mei Meng, developer frontend à Paris, design captivating user interfaces with interactive front-end functionality for your website"/><meta property="twitter:image" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png"/><meta name="msapplication-TileColor" content="#603cba"/><meta name="theme-color" content="#6c63ff"/><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v8=qAJ44G5Bm7"/><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png?v8=qAJ44G5Bm7"/><link rel="shortcut icon" href="./favicon.ico?v8=qAJ44G5Bm7"/><link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v8=qAJ44G5Bm7"/><link rel="manifest" href="./manifest.json"/><link rel="preload" href="./static/media/Montserrat-Regular.3cd786652b8a2e9d41f2.ttf" as="font" type="font/woff" crossorigin/><link rel="preload" href="./static/media/Agustina.eb0c59dda4cc308cba96.woff" as="font" type="font/woff" crossorigin/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-135618960-2")</script><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css"/><script defer="defer" src="./static/js/main.1322b13f.js"></script><link href="./static/css/main.5b2d260d.css" rel="stylesheet"></head><body><div id="root"></div><script type="application/ld+json">{
+        "@context": "http://schema.org/",
+        "@graph": [
+          {
+            "@type": "WebSite",
+            "image": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png",
+            "@id": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/#website",
+            "url": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/",
+            "name": "Mei Meng",
+            "description": "Mei Meng - Developer Portfolio",
+            "inLanguage": "en-US"
+          },
+          {
+            "@type": "WebPage",
+            "@id": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/#webpage",
+            "url": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/",
+            "name": "Mei Meng - Developer Portfolio | Page d’accueil",
+            "isPartOf": {
+              "@id": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/#website"
+            },
+            "description": "Crafting captivating user experiences with interactive front-end elements and tailored website optimization",
+            "inLanguage": "en-US",
+            "potentialAction": [
+              {
+                "@type": "ReadAction",
+                "target": [
+                  "https://liujiaodaliao.github.io/Developer_Portfolio_p12/"
+                ]
+              }
+            ]
+          },
+          {
+            "@type": "ProfessionalService",
+            "image": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png",
+            "currenciesAccepted": "EUR",
+            "openingHours": "Mo,Tu,We,Th,Fr 10:00-20:00",
+            "paymentAccepted": "Cash, Credit Card, Bank Transfer",
+            "priceRange": "Developer Rates",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Av du général",
+              "addressLocality": "Créteil",
+              "addressRegion": "Île-de-France",
+              "postalCode": "94000",
+              "addressCountry": "FR"
+            },
+            "areaServed": {
+              "@type": "AdministrativeArea",
+              "name": ["Île de France", "Paris", "Créteil"]
+            },
+            "email": "liujiaodaliao2021@gmail.com",
+            "legalName": "Mei Meng",
+            "numberOfEmployees": {"@type": "QuantitativeValue", "value": 1},
+            "slogan": "Crafting captivating user experiences with interactive front-end elements and tailored website optimization.",
+            "telephone": "+330000000000",
+            "description": "Developer freelance",
+            "name": "Mei Meng",
+            "url": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/"
+          }
+        ]
+      }</script></body></html>
