--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Mei Meng | Developer Portfolio</title><meta name="title" content="DeveloperFolio | Developer Portfolio"/><meta name="description" content="Create engaging user interfaces with interactive front-end elements and optimize website for you"/><meta property="og:site_name" content="Mei Meng"/><meta property="og:type" content="website"/><meta property="og:url" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/"/><meta property="og:title" content="Mei Meng - DeveloperFolio"/><meta property="og:description" content="Mei Meng, developer frontend à Paris, design captivating user interfaces with interactive front-end functionality for your website."/><meta property="og:image" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png"/><meta property="twitter:card" content="summary_large_image"/><meta property="twitter:url" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/"/><meta property="twitter:title" content="Mei Meng - DeveloperFolio"/><meta property="twitter:description" content="Mei Meng, developer frontend à Paris, design captivating user interfaces with interactive front-end functionality for your website"/><meta property="twitter:image" content="https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png"/><meta name="msapplication-TileColor" content="#603cba"/><meta name="theme-color" content="#6c63ff"/><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v8=qAJ44G5Bm7"/><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png?v8=qAJ44G5Bm7"/><link rel="shortcut icon" href="./favicon.ico?v8=qAJ44G5Bm7"/><link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v8=qAJ44G5Bm7"/><link rel="manifest" href="./manifest.json"/><link rel="preload" href="./static/media/Montserrat-Regular.3cd786652b8a2e9d41f2.ttf" as="font" type="font/woff" crossorigin/><link rel="preload" href="./static/media/Agustina.eb0c59dda4cc308cba96.woff" as="font" type="font/woff" crossorigin/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-135618960-2")</script><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css"/><script defer="defer" src="./static/js/main.1322b13f.js"></script><link href="./static/css/main.5b2d260d.css" rel="stylesheet"></head><body><div id="root"></div><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Mei Meng | Developer Portfolio</title><meta name="title" content="DeveloperFolio | Developer Portfolio"/><meta name="description" content="Create engaging user interfaces with interactive front-end elements and optimize website for you"/><meta property="og:site_name" content="Mei Meng"/><meta property="og:type" content="website"/><meta property="og:url" content="https://liujiaodaliao.github.io/DeveloperFolio_P12/"/><meta property="og:title" content="Mei Meng - DeveloperFolio"/><meta property="og:description" content="Mei Meng, developer frontend à Paris, design captivating user interfaces with interactive front-end functionality for your website."/><meta property="og:image" content="https://liujiaodaliao.github.io/DeveloperFolio_P12/static/avatar.png"/><meta property="twitter:card" content="summary_large_image"/><meta property="twitter:url" content="https://liujiaodaliao.github.io/DeveloperFolio_P12/"/><meta property="twitter:title" content="Mei Meng - DeveloperFolio"/><meta property="twitter:description" content="Mei Meng, developer frontend à Paris, design captivating user interfaces with interactive front-end functionality for your website"/><meta property="twitter:image" content="https://liujiaodaliao.github.io/DeveloperFolio_P12/static/avatar.png"/><meta name="msapplication-TileColor" content="#603cba"/><meta name="theme-color" content="#6c63ff"/><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v8=qAJ44G5Bm7"/><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png?v8=qAJ44G5Bm7"/><link rel="shortcut icon" href="./favicon.ico?v8=qAJ44G5Bm7"/><link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v8=qAJ44G5Bm7"/><link rel="manifest" href="./manifest.json"/><link rel="preload" href="./Montserrat-Regular.3cd786652b8a2e9d41f2.ttf" as="font" type="font/woff" crossorigin/><link rel="preload" href="./Agustina.eb0c59dda4cc308cba96.woff" as="font" type="font/woff" crossorigin/><script async src="https://www.googletagmanager.com/gtag/js?id=UA-135618960-2"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-135618960-2")</script><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css"/><script defer="defer" src="./static/js/main.1322b13f.js"></script><link href="./static/css/main.5b2d260d.css" rel="stylesheet"></head><body><div id="root"></div><script type="application/ld+json">{
         "@context": "http://schema.org/",
         "@graph": [
           {
             "@type": "WebSite",
-            "image": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png",
-            "@id": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/#website",
-            "url": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/",
+            "image": "https://liujiaodaliao.github.io/DeveloperFolio_P12/static/avatar.png",
+            "@id": "https://liujiaodaliao.github.io/DeveloperFolio_P12/#website",
+            "url": "https://liujiaodaliao.github.io/DeveloperFolio_P12/",
             "name": "Mei Meng",
             "description": "Mei Meng - Developer Portfolio",
             "inLanguage": "en-US"
           },
           {
             "@type": "WebPage",
-            "@id": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/#webpage",
-            "url": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/",
+            "@id": "https://liujiaodaliao.github.io/DeveloperFolio_P12/#webpage",
+            "url": "https://liujiaodaliao.github.io/DeveloperFolio_P12/",
             "name": "Mei Meng - Developer Portfolio | Page d’accueil",
             "isPartOf": {
-              "@id": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/#website"
+              "@id": "https://liujiaodaliao.github.io/DeveloperFolio_P12/#website"
             },
             "description": "Crafting captivating user experiences with interactive front-end elements and tailored website optimization",
             "inLanguage": "en-US",
@@ -24,14 +24,14 @@
               {
                 "@type": "ReadAction",
                 "target": [
-                  "https://liujiaodaliao.github.io/Developer_Portfolio_p12/"
+                  "https://liujiaodaliao.github.io/DeveloperFolio_P12/"
                 ]
               }
             ]
           },
           {
             "@type": "ProfessionalService",
-            "image": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/static/avatar.png",
+            "image": "https://liujiaodaliao.github.io/DeveloperFolio_P12/static/avatar.png",
             "currenciesAccepted": "EUR",
             "openingHours": "Mo,Tu,We,Th,Fr 10:00-20:00",
             "paymentAccepted": "Cash, Credit Card, Bank Transfer",
@@ -55,7 +55,7 @@
             "telephone": "+330000000000",
             "description": "Developer freelance",
             "name": "Mei Meng",
-            "url": "https://liujiaodaliao.github.io/Developer_Portfolio_p12/"
+            "url": "https://liujiaodaliao.github.io/DeveloperFolio_P12/"
           }
         ]
       }</script></body></html>
