feat   font -> static/media

--- a/public/index.html
+++ b/public/index.html
@@ -73,16 +73,18 @@
     -->
     <link rel="manifest" href="./manifest.json" />
 
+    <!-- href="./Montserrat-Regular.3cd786652b8a2e9d41f2.ttf" -->
+    <!-- href="./Agustina.eb0c59dda4cc308cba96.woff" -->
     <link
       rel="preload"
-      href="./Montserrat-Regular.3cd786652b8a2e9d41f2.ttf"
+      href="/static/media/Montserrat-Regular.3cd786652b8a2e9d41f2.ttf"
       as="font"
       type="font/woff"
       crossorigin
     />
     <link
       rel="preload"
-      href="./Agustina.eb0c59dda4cc308cba96.woff"
+      href="/static/media/Agustina.eb0c59dda4cc308cba96.woff"
       as="font"
       type="font/woff"
       crossorigin
