feat 去掉安卓头像 预加载

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>Mei Meng | Developer Portfolio</title>
+    <title>Mei Meng - Developer Portfolio</title>
     <meta name="title" content="DeveloperFolio | Developer Portfolio" />
     <meta
       name="description"
@@ -72,23 +72,6 @@
       user's mobile device or desktop.
     -->
     <link rel="manifest" href="./manifest.json" />
-
-    <!-- href="./Montserrat-Regular.3cd786652b8a2e9d41f2.ttf" -->
-    <!-- href="./Agustina.eb0c59dda4cc308cba96.woff" -->
-    <link
-      rel="preload"
-      href="/static/media/Montserrat-Regular.3cd786652b8a2e9d41f2.ttf"
-      as="font"
-      type="font/woff"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/static/media/Agustina.eb0c59dda4cc308cba96.woff"
-      as="font"
-      type="font/woff"
-      crossorigin
-    />
 
     <!-- Global site tag (gtag.js) - Google Analytics 跟踪用户行为和网站使用情况-->
     <script
